--- a/A04/index.html
+++ b/A04/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
+    
     <div class="container-fluid my-2 p-2" style="background-color: rgb(82, 43, 237  );">
+        <a href="../index.html" class = btn btn-primary m-3 style="color: aqua;">Back to Profile</a>
         <h1 class="text-center my-2 style color text-white">PS5 SHOWCASE</h1>
     </div>
-
     <div class="container-fluid my-4" style="background-color: rgb(82, 43, 237);">
         <div class="row">
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/ps5.jpg" class="card-img-top" alt="PS5 Console">
                     <div class="card-body">
                         <p class="card-text text-center">PS5 Console</p>
@@ -27,7 +28,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/control dualsense.jpg" class="card-img-top" alt="Dualsense">
                     <div class="card-body">
                         <p class="card-text text-center">Dualsense</p>
@@ -36,7 +37,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/games.webp" class="card-img-top" alt="Popular Games">
                     <div class="card-body">
                         <p class="card-text text-center">Popular Games</p>
@@ -45,7 +46,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/earphone.webp" class="card-img-top" alt="Playstation Earbuds">
                     <div class="card-body">
                         <p class="card-text text-center">Playstation Earbuds</p>
@@ -54,7 +55,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/games2.webp" class="card-img-top" alt="High Quality Gaming">
                     <div class="card-body">
                         <p class="card-text text-center">High Quality Gaming</p>
@@ -63,7 +64,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/specs.jpg" class="card-img-top" alt="PS5 specs">
                     <div class="card-body">
                         <p class="card-text text-center">PS5 specs</p>
@@ -72,7 +73,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/ps5 pro.jpg" class="card-img-top" alt="PS5 Pro">
                     <div class="card-body">
                         <p class="card-text text-center">PS5 Pro</p>
@@ -81,7 +82,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/color controller.webp" class="card-img-top" alt="Different Variants of Controllers">
                     <div class="card-body">
                         <p class="card-text text-center">Different Variants of Controllers</p>
@@ -90,7 +91,7 @@
             </div>
 
             <div class="col-12 col-md-6 col-lg-4 mb-3">
-                <div class="card shadow rounded-5">
+                <div class="card shadow rounded-5 overflow-hidden">
                     <img src="A04 pics/ps5 bg.webp " class="card-img-top" alt="PS5 Console">
                     <div class="card-body">
                         <p class="card-text text-center">PS5 Console</p>
