--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>John Paul D. Godoy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #1c1f26;
@@ -14,7 +15,7 @@
     }
 
     .header-title {
-      color: #00adb5; 
+      color: #00adb5;
       text-align: center;
       margin-top: 2rem;
       font-weight: bold;
@@ -59,6 +60,21 @@
       display: block;
       border: 3px solid #00adb5;
     }
+
+    .social-icons {
+      margin-top: 15px;
+    }
+
+    .social-icons a {
+      color: #ffffff;
+      margin: 0 10px;
+      font-size: 1.5rem;
+      text-decoration: none;
+    }
+
+    .social-icons a:hover {
+      color: #00adb5;
+    }
   </style>
 </head>
 
@@ -76,10 +92,16 @@
       <div class="col-md-6">
         <div class="card shadow text-center">
           <div class="card-body">
-            <img src="Profile pics/profile2.jpg" alt="Profile Picture" class="profile-img mb-3">
+            <img src="Me/profile2.jpg" alt="Profile Picture" class="profile-img mb-3">
             <h5 class="card-title" style="color: white;">John Paul D. Godoy</h5>
-            <p class="card-text" style="color: white;">Hi i am a student in PUP Sto.Tomas and here are my hobbies</p>
+            <p class="card-text" style="color: white;">Hi, I am a student at PUP Sto. Tomas and here are my hobbies:</p>
             <p class="card-text" style="color: white;">Anime • K-Pop • Gaming</p>
+
+            <div class="social-icons">
+              <a href="https://www.instagram.com/jp_desu04/" target="_blank" class="fab fa-instagram"></a>
+              <a href="https://github.com/jpgodoy04" target="_blank" class="fab fa-github"></a>
+              <a href="https://www.facebook.com/chaepi04" target="_blank" class="fab fa-facebook"></a>
+            </div>
           </div>
         </div>
       </div>
@@ -124,11 +146,11 @@
 
       <div class="col">
         <div class="card h-100 shadow">
-          <img src="https://via.placeholder.com/400x150" class="card-img-top" alt="A07 Preview">
+          <img src="A07/bg.jpg" class="card-img-top" alt="A07 Preview">
           <div class="card-body text-white">
             <h5 class="card-title">A07</h5>
-            <p class="card-text"></p>
-            <a href="#" class="btn btn-primary btn-custom">Go to Site</a>
+            <p class="card-text">Valorant Agents API </p>
+            <a href="A07/index.html" class="btn btn-primary btn-custom">Go to Site</a>
           </div>
         </div>
       </div>
@@ -157,6 +179,43 @@
 
     </div>
   </div>
+
+  <footer class="container mt-5">
+    <div class="text-center">
+      <button class="btn btn-outline-info mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#footerContent" aria-expanded="false" aria-controls="footerContent">
+        Show More About Me
+      </button>
+    </div>
+
+    <div class="collapse" id="footerContent">
+      <div class="row g-3 text-center">
+        <div class="col-6 col-md-3">
+          <img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7">
+        </div>
+        <div class="col-6 col-md-3">
+          <img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8">
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
