--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>John Paul D. Godoy</title>
+  <title>Chaepi Hub</title>
+  <link rel="icon" href="Me/chaewon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -75,6 +76,30 @@
     .social-icons a:hover {
       color: #00adb5;
     }
+
+    .btn-cute {
+      background-color: #00adb5;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+    }
+
+    .btn-cute:hover {
+      background-color: #019ca2;
+      color: #fff;
+    }
+
+    .gif-img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+    }
   </style>
 </head>
 
@@ -96,6 +121,7 @@
             <h5 class="card-title" style="color: white;">John Paul D. Godoy</h5>
             <p class="card-text" style="color: white;">Hi, I am a student at PUP Sto. Tomas and here are my hobbies:</p>
             <p class="card-text" style="color: white;">Anime • K-Pop • Gaming</p>
+            <p><a href="https://youtu.be/3byhlRZTkOk?si=Lmdm8F0uXzHnWwvh" target="_blank" class="btn-cute mt-2">Click to see something cute! 🐱</a></p>
 
             <div class="social-icons">
               <a href="https://www.instagram.com/jp_desu04/" target="_blank" class="fab fa-instagram"></a>
@@ -189,32 +215,32 @@
 
     <div class="collapse" id="footerContent">
       <div class="row g-3 text-center">
-        <div class="col-6 col-md-3">
-          <img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7">
-        </div>
-        <div class="col-6 col-md-3">
-          <img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8">
-        </div>
+        <div class="col-6 col-md-3"><img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1"></div>
+        <div class="col-6 col-md-3"><img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8"></div>
       </div>
     </div>
+
+    <div class="text-center mt-4">
+      <button class="btn btn-outline-warning mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#gifSection" aria-expanded="false" aria-controls="gifSection">
+        Kim Chaewon
+      </button>
+    </div>
+
+    <div class="collapse" id="gifSection">
+      <div class="row g-3 text-center">
+        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 1"></div>
+        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 2"></div>
+        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 3"></div>
+        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 4"></div>
+      </div>
+    </div>
+
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
