--- a/A07/index.html
+++ b/A07/index.html
@@ -2,179 +2,187 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Valorant Agents</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .picture-container {
-            width: 120px;
-            height: 120px;
-            background-color: #1d1a1a;
-            border-radius: 100px;
-            overflow: hidden;
-        }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Valorant Agents</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .picture-container {
+      width: 120px;
+      height: 120px;
+      background-color: #1d1a1a;
+      border-radius: 100px;
+      overflow: hidden;
+    }
 
-        .picture-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+    .picture-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-        .card {
-            background-color: #1f1f1f;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
+    .card {
+      background-color: #1f1f1f;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
 
-        .role-badge {
-            font-size: 0.9rem;
-            font-weight: bold;
-            padding: 4px 10px;
-            border-radius: 12px;
-            color: white;
-            display: inline-block;
-        }
+    .role-badge {
+      font-size: 0.9rem;
+      font-weight: bold;
+      padding: 4px 10px;
+      border-radius: 12px;
+      color: white;
+      display: inline-block;
+    }
 
-        .Duelist {
-            background-color: #d32f2f;
-        }
+    .Duelist {
+      background-color: #d32f2f;
+    }
 
-        .Initiator {
-            background-color: #388e3c;
-        }
+    .Initiator {
+      background-color: #388e3c;
+    }
 
-        .Sentinel {
-            background-color: #1976d2;
-        }
+    .Sentinel {
+      background-color: #1976d2;
+    }
 
-        .Controller {
-            background-color: #9c27b0;
-        }
+    .Controller {
+      background-color: #9c27b0;
+    }
 
-        body {
-            background-image: url('bg.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-    </style>
+    body {
+      background-image: url('bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="container-fluid py-3" style="background-color: #111;">
+    <div class="container d-flex align-items-center justify-content-between">
+      <img src="valo logo.webp" alt="Valorant Logo" style="max-width: 20%; margin-right: 15px;">
+      <div class="h1 text-white mb-0 flex-grow-1">Valorant Agents</div>
+      <a href="../index.html" class="btn btn-primary" style="color: aqua;">Back to Profile</a>
+    </div>
+  </div>
 
+  <div class="container mt-4">
+    <input type="text" id="searchInput" class="form-control form-control-lg" placeholder="Search for an agent...">
+  </div>
 
-    <div class="container-fluid py-3" style="background-color: #111;">
-        <div class="container d-flex align-items-center justify-content-between">
-            <img src="valo logo.webp" alt="Valorant Logo" style="max-width: 20%; margin-right: 15px;">
-            <div class="h1 text-white mb-0 flex-grow-1 ">Valorant Agents</div>
-            <a href="../index.html" class=" btn-primary" style="color: aqua;">Back to Profile</a>
+  <div class="container-fluid mt-3">
+    <div class="row" id="container"></div>
+  </div>
+
+  <div class="modal fade" id="sprayModal" tabindex="-1" aria-labelledby="sprayModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content bg-dark text-white">
+        <div class="modal-header border-0">
+          <h5 class="modal-title" id="sprayModalLabel">You Just Got Sprayed! ^o^</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-    </div>
-
-
-    <div class="container mt-4">
-        <input type="text" id="searchInput" class="form-control form-control-lg" placeholder="Search for an agent...">
-    </div>
-    >
-    <div class="container-fluid mt-3">
-        <div class="row" id="container"></div>
-    </div>
-
-    <div class="modal fade" id="sprayModal" tabindex="-1" aria-labelledby="sprayModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content bg-dark text-white">
-                <div class="modal-header border-0">
-                    <h5 class="modal-title" id="sprayModalLabel">Get Sprayed! ^o^</h5>
-                    <button type="button" class="btn-close btn -close-white" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                </div>
-                <div class="modal-body text-center">
-                    <img id="sprayImage" src="" alt="Spray" class="img-fluid rounded" style="max-height: 300px;">
-                </div>
-            </div>
+        <div class="modal-body text-center">
+          <img id="sprayImage" src="" alt="Spray" class="img-fluid rounded" style="max-height: 300px;">
         </div>
+      </div>
     </div>
+  </div>
 
-    <script>
-        let agentsData = [];
-        let sprayData = [];
+  <script>
+    let agentsData = [];
+    let sprayData = [];
 
-        const loadValorantAgents = async () => {
-            try {
-                const res = await fetch('https://valorant-api.com/v1/agents?isPlayableCharacter=true');
-                const data = await res.json();
-                agentsData = data.data;
-                renderAgents(agentsData);
-            } catch (error) {
-                console.error("Error loading Valorant agents:", error);
-            }
-        };
+    const loadValorantAgents = async () => {
+      try {
+        const res = await fetch('https://valorant-api.com/v1/agents?isPlayableCharacter=true');
+        const data = await res.json();
+        agentsData = data.data;
+        renderAgents(agentsData);
+      } catch (error) {
+        console.error("Error loading Valorant agents:", error);
+      }
+    };
 
-        const loadValorantSprays = async () => {
-            try {
-                const res = await fetch('https://valorant-api.com/v1/sprays');
-                const data = await res.json();
-                sprayData = data.data.filter(spray => spray.fullTransparentIcon);
-            } catch (error) {
-                console.error("Error loading sprays:", error);
-            }
-        };
+    const loadValorantSprays = async () => {
+      try {
+        const res = await fetch('https://valorant-api.com/v1/sprays');
+        const data = await res.json();
+        sprayData = data.data.filter(spray => spray.fullTransparentIcon);
+      } catch (error) {
+        console.error("Error loading sprays:", error);
+      }
+    };
 
-        const renderAgents = (agents) => {
-            const container = document.getElementById("container");
-            container.innerHTML = "";
+    const renderAgents = (agents) => {
+      const container = document.getElementById("container");
+      container.innerHTML = "";
 
-            agents.forEach((agent, index) => {
-                const role = agent.role?.displayName || 'Unknown';
-                const roleClass = role.replace(/\s+/g, '');
+      agents.forEach((agent, index) => {
+        const role = agent.role?.displayName || 'Unknown';
+        const roleClass = role.replace(/\s+/g, '');
 
-                container.innerHTML += `
+        container.innerHTML += `
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card my-3 text-center p-4 rounded-5 shadow mx-auto agent-card" data-index="${index}">
+            <div class="card my-3 text-center p-4 rounded-5 shadow mx-auto agent-card" data-id="${agent.uuid}">
               <div class="picture-container mx-auto">
                 <img src="${agent.displayIcon}" alt="${agent.displayName}">
               </div>
               <div class="mt-4 h5">${agent.displayName}</div>
-              ${agent.role ? `
-              <div class="mt-2 role-badge ${roleClass}">
-                ${role}
-              </div>` : ''}
+              ${agent.role ? `<div class="mt-2 role-badge ${roleClass}">${role}</div>` : ''}
             </div>
           </div>
         `;
-            });
+      });
 
-            document.querySelectorAll('.agent-card').forEach(card => {
-                card.addEventListener('click', () => {
-                    if (sprayData.length > 0) {
-                        const randomSpray = sprayData[Math.floor(Math.random() * sprayData.length)];
-                        const sprayImage = document.getElementById("sprayImage");
-                        sprayImage.src = randomSpray.fullTransparentIcon;
-                        sprayImage.alt = randomSpray.displayName;
-                        new bootstrap.Modal(document.getElementById('sprayModal')).show();
-                    } else {
-                        console.log("No sprays available to display.");
-                    }
-                });
-            });
-        };
+      container.innerHTML += `
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card my-3 text-center p-4 rounded-5 shadow mx-auto random-spray-card" style="background-color: #292929;">
+            <div class="picture-container mx-auto">
+              <img src="spray img.webp" alt="Random Spray"> 
+            </div>
+            <div class="mt-4 h5">Click to get sprayed</div>
+          </div>
+        </div>
+      `;
 
-        document.getElementById("searchInput").addEventListener("input", (e) => {
-            const searchTerm = e.target.value.toLowerCase();
-            const filtered = agentsData.filter(agent =>
-                agent.displayName.toLowerCase().includes(searchTerm)
-            );
-            renderAgents(filtered);
+      document.querySelectorAll('.agent-card').forEach(card => {
+        card.addEventListener('click', () => {
+          const agentId = card.getAttribute('data-id');
+          window.location.href = `view.html?agentId=${agentId}`;
         });
+      });
 
-        loadValorantAgents();
-        loadValorantSprays();
-    </script>
+      document.querySelector('.random-spray-card').addEventListener('click', () => {
+        if (sprayData.length > 0) {
+          const randomSpray = sprayData[Math.floor(Math.random() * sprayData.length)];
+          const sprayImage = document.getElementById("sprayImage");
+          sprayImage.src = randomSpray.fullTransparentIcon;
+          sprayImage.alt = randomSpray.displayName;
+          new bootstrap.Modal(document.getElementById('sprayModal')).show();
+        } else {
+          console.log("No sprays available.");
+        }
+      });
+    };
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+    document.getElementById("searchInput").addEventListener("input", (e) => {
+      const searchTerm = e.target.value.toLowerCase();
+      const filtered = agentsData.filter(agent =>
+        agent.displayName.toLowerCase().includes(searchTerm)
+      );
+      renderAgents(filtered);
+    });
+
+    loadValorantAgents();
+    loadValorantSprays();
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
