--- a/index.html
+++ b/index.html
@@ -100,6 +100,41 @@
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
     }
+
+    .skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.skill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 3rem;
+  transition: all 0.3s ease;
+  color: #00adb5;
+  cursor: pointer;
+}
+
+.skill p {
+  margin-top: 0.5rem;
+  font-size: 1.2rem;
+  color: #ffffff;
+}
+
+.skills-container:hover .skill {
+  filter: blur(3px);
+  opacity: 0.4;
+}
+
+.skills-container .skill:hover {
+  filter: none;
+  opacity: 1;
+  transform: scale(1.1);
+}
+
   </style>
 </head>
 
@@ -109,7 +144,7 @@
     <button class="btn btn-light-mode" id="theme-toggle">Light Mode</button>
   </div>
 
-  <h1 class="header-title">Profile</h1>
+  <h1 class="header-title" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">ChaeHub</h1>
 
   <div class="container py-5">
 
@@ -133,6 +168,35 @@
       </div>
     </div>
 
+    <h1 class="text-center mb-4">Skills</h1>
+
+    <div class="skills-container text-center mb-5">
+      <div class="skill">
+        <i class="fab fa-php"></i>
+        <p>PHP</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-html5"></i>
+        <p>HTML</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-css3-alt"></i>
+        <p>CSS</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-js-square"></i>
+        <p>JavaScript</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-python"></i>
+        <p>Python</p>
+      </div>
+      <div class="skill">
+        <i class="fab fa-java"></i>
+        <p>Java</p>
+      </div>
+    </div>
+    
     <h1 class="text-center mb-4">Projects</h1>
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -205,43 +269,44 @@
 
     </div>
   </div>
+<footer class="container mt-5">
+  <div class="text-center">
+    <button class="btn btn-outline-info mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#footerContent" aria-expanded="false" aria-controls="footerContent">
+      Show More About Me
+    </button>
+  </div>
 
-  <footer class="container mt-5">
-    <div class="text-center">
-      <button class="btn btn-outline-info mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#footerContent" aria-expanded="false" aria-controls="footerContent">
-        Show More About Me
-      </button>
+  <div class="collapse" id="footerContent">
+    <div class="row g-3 text-center">
+      <div class="col-6 col-md-3"><img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1"></div>
+      <div class="col-6 col-md-3"><img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7"></div>
+      <div class="col-6 col-md-3"><img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8"></div>
     </div>
+  </div>
 
-    <div class="collapse" id="footerContent">
-      <div class="row g-3 text-center">
-        <div class="col-6 col-md-3"><img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1"></div>
-        <div class="col-6 col-md-3"><img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7"></div>
-        <div class="col-6 col-md-3"><img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8"></div>
+  <div class="text-center mt-5">
+    <div class="row g-3 text-center">
+      <div class="col-6 col-md-3">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 1">
+      </div>
+      <div class="col-6 col-md-3">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 2">
+      </div>
+      <div class="col-6 col-md-3">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 3">
+      </div>
+      <div class="col-6 col-md-3">
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 4">
       </div>
     </div>
+  </div>
+</footer>
 
-    <div class="text-center mt-4">
-      <button class="btn btn-outline-warning mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#gifSection" aria-expanded="false" aria-controls="gifSection">
-        Kim Chaewon
-      </button>
-    </div>
-
-    <div class="collapse" id="gifSection">
-      <div class="row g-3 text-center">
-        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 1"></div>
-        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 2"></div>
-        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 3"></div>
-        <div class="col-6 col-md-3"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 4"></div>
-      </div>
-    </div>
-
-  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
