--- a/index.html
+++ b/index.html
@@ -102,39 +102,38 @@
     }
 
     .skills-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
-}
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
 
-.skill {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 3rem;
-  transition: all 0.3s ease;
-  color: #00adb5;
-  cursor: pointer;
-}
+    .skill {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 3rem;
+      transition: all 0.3s ease;
+      color: #00adb5;
+      cursor: pointer;
+    }
 
-.skill p {
-  margin-top: 0.5rem;
-  font-size: 1.2rem;
-  color: #ffffff;
-}
+    .skill p {
+      margin-top: 0.5rem;
+      font-size: 1.2rem;
+      color: #ffffff;
+    }
 
-.skills-container:hover .skill {
-  filter: blur(3px);
-  opacity: 0.4;
-}
+    .skills-container:hover .skill {
+      filter: blur(3px);
+      opacity: 0.4;
+    }
 
-.skills-container .skill:hover {
-  filter: none;
-  opacity: 1;
-  transform: scale(1.1);
-}
-
+    .skills-container .skill:hover {
+      filter: none;
+      opacity: 1;
+      transform: scale(1.1);
+    }
   </style>
 </head>
 
@@ -144,7 +143,9 @@
     <button class="btn btn-light-mode" id="theme-toggle">Light Mode</button>
   </div>
 
-  <h1 class="header-title" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">ChaeHub</h1>
+  <h1 class="header-title"
+    style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+    ChaeSite</h1>
 
   <div class="container py-5">
 
@@ -156,7 +157,8 @@
             <h5 class="card-title" style="color: white;">John Paul D. Godoy</h5>
             <p class="card-text" style="color: white;">Hi, I am a student at PUP Sto. Tomas and here are my hobbies:</p>
             <p class="card-text" style="color: white;">Anime • K-Pop • Gaming</p>
-            <p><a href="https://youtu.be/3byhlRZTkOk?si=Lmdm8F0uXzHnWwvh" target="_blank" class="btn-cute mt-2">Click to see something cute! 🐱</a></p>
+            <p><a href="https://youtu.be/3byhlRZTkOk?si=Lmdm8F0uXzHnWwvh" target="_blank" class="btn-cute mt-2">Click to
+                see something cute! 🐱</a></p>
 
             <div class="social-icons">
               <a href="https://www.instagram.com/jp_desu04/" target="_blank" class="fab fa-instagram"></a>
@@ -168,7 +170,7 @@
       </div>
     </div>
 
-    <h1 class="text-center mb-4">Skills</h1>
+    <h1 class="text-center mb-4">Programming Languages</h1>
 
     <div class="skills-container text-center mb-5">
       <div class="skill">
@@ -196,7 +198,7 @@
         <p>Java</p>
       </div>
     </div>
-    
+
     <h1 class="text-center mb-4">Projects</h1>
 
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -236,7 +238,7 @@
 
       <div class="col">
         <div class="card h-100 shadow">
-          <img src="A07/bg.jpg" class="card-img-top" alt="A07 Preview">
+          <img src="A07/bg.jpg" class="card-img-top" alt="Coming Soon :>">
           <div class="card-body text-white">
             <h5 class="card-title">A07</h5>
             <p class="card-text">Valorant Agents API </p>
@@ -247,10 +249,10 @@
 
       <div class="col">
         <div class="card h-100 shadow">
-          <img src="https://via.placeholder.com/400x150" class="card-img-top" alt="A08 Preview">
+          <img src="https://via.placeholder.com/400x150" class="card-img-top" alt="Coming Soon">
           <div class="card-body text-white">
             <h5 class="card-title">A08</h5>
-            <p class="card-text"></p>
+            <p class="card-text">Coming Soon :></p>
             <a href="#" class="btn btn-primary btn-custom">Go to Site</a>
           </div>
         </div>
@@ -258,10 +260,10 @@
 
       <div class="col">
         <div class="card h-100 shadow">
-          <img src="https://via.placeholder.com/400x150" class="card-img-top" alt="A09 Preview">
+          <img src="https://via.placeholder.com/400x150" class="card-img-top" alt="Coming Soon">
           <div class="card-body text-white">
             <h5 class="card-title">A09</h5>
-            <p class="card-text"></p>
+            <p class="card-text">Coming Soon :></p>
             <a href="#" class="btn btn-primary btn-custom">Go to Site</a>
           </div>
         </div>
@@ -269,43 +271,54 @@
 
     </div>
   </div>
-<footer class="container mt-5">
-  <div class="text-center">
-    <button class="btn btn-outline-info mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#footerContent" aria-expanded="false" aria-controls="footerContent">
-      Show More About Me
-    </button>
-  </div>
-
-  <div class="collapse" id="footerContent">
-    <div class="row g-3 text-center">
-      <div class="col-6 col-md-3"><img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1"></div>
-      <div class="col-6 col-md-3"><img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7"></div>
-      <div class="col-6 col-md-3"><img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8"></div>
+  <footer class="container mt-5">
+    <div class="text-center">
+      <button class="btn btn-outline-info mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#footerContent"
+        aria-expanded="false" aria-controls="footerContent">
+        Show More About Me
+      </button>
     </div>
-  </div>
 
-  <div class="text-center mt-5">
-    <div class="row g-3 text-center">
-      <div class="col-6 col-md-3">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 1">
-      </div>
-      <div class="col-6 col-md-3">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 2">
-      </div>
-      <div class="col-6 col-md-3">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 3">
-      </div>
-      <div class="col-6 col-md-3">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif" class="img-fluid gif-img" alt="Cute Gif 4">
+    <div class="collapse" id="footerContent">
+      <div class="row g-3 text-center">
+        <div class="col-6 col-md-3"><img src="Me/profile1.jpg" class="img-fluid rounded shadow" alt="About Image 1">
+        </div>
+        <div class="col-6 col-md-3"><img src="Me/profile3.jpg" class="img-fluid rounded shadow" alt="About Image 2">
+        </div>
+        <div class="col-6 col-md-3"><img src="Me/pfp4.jpg" class="img-fluid rounded shadow" alt="About Image 3"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp5.jpg" class="img-fluid rounded shadow" alt="About Image 4"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp6.jpg" class="img-fluid rounded shadow" alt="About Image 5"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp7.jpg" class="img-fluid rounded shadow" alt="About Image 6"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp8.jpg" class="img-fluid rounded shadow" alt="About Image 7"></div>
+        <div class="col-6 col-md-3"><img src="Me/pfp9.jpg" class="img-fluid rounded shadow" alt="About Image 8"></div>
       </div>
     </div>
-  </div>
-</footer>
+
+    <div class="text-center mt-5">
+      <div class="row g-3 text-center">
+        <div class="col-6 col-md-3">
+          <img
+            src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif"
+            class="img-fluid gif-img" alt="Cute Gif 1">
+        </div>
+        <div class="col-6 col-md-3">
+          <img
+            src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif"
+            class="img-fluid gif-img" alt="Cute Gif 2">
+        </div>
+        <div class="col-6 col-md-3">
+          <img
+            src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif"
+            class="img-fluid gif-img" alt="Cute Gif 3">
+        </div>
+        <div class="col-6 col-md-3">
+          <img
+            src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif"
+            class="img-fluid gif-img" alt="Cute Gif 4">
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
