--- a/A05/index.html
+++ b/A05/index.html
@@ -39,6 +39,23 @@
       height: 200px;
       object-fit: cover;
     }
+    .offcanvas-header,
+.offcanvas-body {
+	background-color: #111;
+	color: white;
+}
+
+.offcanvas-body a {
+	color: #fdd835;
+	text-decoration: none;
+}
+
+.navbar-toggler {
+	position: fixed;
+	top: 1rem;
+	left: 1rem;
+	z-index: 9999;
+}
   </style>
 </head>
 <body>
