--- a/A04/index.html
+++ b/A04/index.html
@@ -8,6 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+<style>
+    .offcanvas-header,
+.offcanvas-body {
+	background-color: #111;
+	color: white;
+}
+
+.offcanvas-body a {
+	color: #fdd835;
+	text-decoration: none;
+}
+
+.navbar-toggler {
+	position: fixed;
+	top: 1rem;
+	left: 1rem;
+	z-index: 9999;
+}
+</style>
 
 <body>
     
