--- a/A07/view.html
+++ b/A07/view.html
@@ -96,7 +96,7 @@
   <div class="container-fluid text-center my-3">
     <div class="row">
       <div class="col">
-        <button class="btn back-button rounded-4 mb-3" onclick="window.history.back()">← Back to Agents</button>
+        <button class="btn back-button rounded-4 mb-3" onclick="window.history.back()">Back to Agents</button>
       </div>
     </div>
 
