--- a/A07/index.html
+++ b/A07/index.html
@@ -62,86 +62,128 @@
     }
 
 
-.navbar {
-  background-color: #1f1f1f !important;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  z-index: 999;
-}
+    .navbar {
+      background-color: #1f1f1f !important;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      z-index: 999;
+    }
 
-.navbar-brand {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: white !important;
-}
+    .navbar-brand {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: white !important;
+    }
 
-.navbar-brand img {
-  height: 40px;
-  border-radius: 50%;
-  object-fit: cover;
-}
+    .navbar-brand img {
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
 
-.navbar-nav .nav-link {
-  color: #ffffff !important;
-  font-weight: 500;
-  transition: color 0.3s ease-in-out;
-}
+    .navbar-nav .nav-link {
+      color: #ffffff !important;
+      font-weight: 500;
+      transition: color 0.3s ease-in-out;
+    }
 
-.navbar-nav .nav-link:hover {
-  color: #ffc107 !important;
-}
+    .navbar-nav .nav-link:hover {
+      color: #ffc107 !important;
+    }
 
-.navbar-toggler {
-  background-color: #ffc107;
-  border: none;
-}
+    .navbar-toggler {
+      background-color: #ffc107;
+      border: none;
+    }
 
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255,255,255,0.8%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255,255,255,0.8%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
 
-  .navbar-brand {
+    .footer-animate {
+      animation: float 3s ease-in-out infinite, glow 2s ease-in-out infinite, colorShift 6s linear infinite;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-5px);
+      }
+
+      100% {
+        transform: translateY(0);
+      }
+    }
+
+
+    .navbar-brand {
       font-family: 'Poppins', sans-serif;
       font-weight: 600;
     }
 
+    body {
+      background-color: var(--dark-bg);
+      color: #fff;
+      font-family: 'Roboto Mono', monospace;
+      transition: background-color var(--transition), color var(--transition);
+      scroll-behavior: smooth;
+    }
+
+      .navbar-brand {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 1.6rem;
+    }
+
+    .navbar-brand img {
+      height: 32px;
+      width: 32px;
+      border-radius: 6px;
+      object-fit: cover;
+    }
   </style>
 </head>
 
 <body>
 
- <nav class="navbar navbar-expand-sm sticky-top" style="background-color: #1f1f1f;">
-  <div class="container">
-    <a class="navbar-brand text-white fw-bold" href="#">
-      <img src="/Me/chaewon.jpg" alt="Mini Logo" style="height: 40px; border-radius: 50%;" />
-      Chaepi Hub
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/index.html">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#search-sec">Search</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link text-white" href="#spray-sec">Spray</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-sm sticky-top" style="background-color: #1f1f1f;">
+    <div class="container">
+      <a class="footer-animate navbar-brand text-white fw-bold" href="#">
+        <img src="/Me/chaewon.jpg" alt="Mini Logo" style="height: 40px; border-radius: 50%;" />
+        ChaeDev
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="footer-animate collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/index.html">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#search-sec">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#spray-sec">Spray</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
- <div class="container-fluid d-flex align-items-center justify-content-between p-3" id="search-sec"
-     style="background-color: rgba(31, 31, 31, 0.3); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-radius: 12px;">
-  <img src="valo logo.webp" alt="Valorant Logo" style="max-width: 20%; margin-right: 15px;">
-  <div class="h1 text-white mb-0 flex-grow-1">Valorant Agents</div>
-</div>
+  <div class="container-fluid d-flex align-items-center justify-content-between p-3" id="search-sec"
+    style="background-color: rgba(31, 31, 31, 0.3); backdrop-filter: blur(10px); -webkit-backdrop-filter: blur(10px); border-radius: 12px;">
+    <img src="valo logo.webp" alt="Valorant Logo" style="max-width: 20%; margin-right: 15px;">
+    <div class="h1 text-white mb-0 flex-grow-1">Valorant Agents</div>
+  </div>
 
 
 
@@ -193,15 +235,15 @@
     };
 
     const renderAgents = (agents) => {
-  const container = document.getElementById("container");
-  container.innerHTML = "";
+      const container = document.getElementById("container");
+      container.innerHTML = "";
 
-  agents.forEach((agent, index) => {
-    const role = agent.role?.displayName || 'Unknown';
-    const roleClass = role.replace(/\s+/g, '');
+      agents.forEach((agent, index) => {
+        const role = agent.role?.displayName || 'Unknown';
+        const roleClass = role.replace(/\s+/g, '');
 
-    container.innerHTML += `
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+        container.innerHTML += `
+      <div class="footer-animate col-12 col-sm-6 col-md-4 col-lg-3">
         <div class="card my-3 text-center p-4 rounded-5 shadow mx-auto">
           <div class="picture-container mx-auto">
             <img src="${agent.displayIcon}" alt="${agent.displayName}">
@@ -212,9 +254,9 @@
         </div>
       </div>
     `;
-  });
+      });
 
-  container.innerHTML += `
+      container.innerHTML += `
     <div class="col-12 col-sm-6 col-md-4 col-lg-3" id='spray-sec'>
       <div class="card my-3 text-center p-4 rounded-5 shadow mx-auto random-spray-card" style="background-color: #292929;">
         <div class="picture-container mx-auto">
@@ -225,18 +267,18 @@
     </div>
   `;
 
-  document.querySelector('.random-spray-card').addEventListener('click', () => {
-    if (sprayData.length > 0) {
-      const randomSpray = sprayData[Math.floor(Math.random() * sprayData.length)];
-      const sprayImage = document.getElementById("sprayImage");
-      sprayImage.src = randomSpray.fullTransparentIcon;
-      sprayImage.alt = randomSpray.displayName;
-      new bootstrap.Modal(document.getElementById('sprayModal')).show();
-    } else {
-      console.log("No sprays available.");
-    }
-  });
-};
+      document.querySelector('.random-spray-card').addEventListener('click', () => {
+        if (sprayData.length > 0) {
+          const randomSpray = sprayData[Math.floor(Math.random() * sprayData.length)];
+          const sprayImage = document.getElementById("sprayImage");
+          sprayImage.src = randomSpray.fullTransparentIcon;
+          sprayImage.alt = randomSpray.displayName;
+          new bootstrap.Modal(document.getElementById('sprayModal')).show();
+        } else {
+          console.log("No sprays available.");
+        }
+      });
+    };
 
 
     document.getElementById("searchInput").addEventListener("input", (e) => {
@@ -252,7 +294,8 @@
 
   </script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
