--- a/A08/EZ-Parallax-master/banner.html
+++ b/A08/EZ-Parallax-master/banner.html
@@ -10,20 +10,21 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="parallax.css" />
   <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
  <nav class="navbar navbar-expand-sm sticky-top" style="background-color: #1f1f1f;">
   <div class="container">
-    <a class="navbar-brand text-white fw-bold" href="#">
+    <a class="footer-animate navbar-brand text-white fw-bold" href="#">
       <img src="img/1p.png" alt="Mini Logo" style="height: 40px; border-radius: 50%;" />
-      Chaepi Hub
+      ChaeDev
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <div class=" footer-animate navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white" href="/index.html">Profile</a>
@@ -40,7 +41,7 @@
 </nav>
 
   <section id="parallax-sec">
-    <div class="keyart" id="parallax">
+    <div class="footer-animate keyart" id="parallax">
       <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>
       <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>
       <div class="keyart_layer parallax" id="keyart-2" data-speed="30"></div>
@@ -54,14 +55,14 @@
     </div>
   </section>
 
-  <section class="main-content py-5">
+  <section class="footer-animate main-content py-5">
     <div class="container">
       
-      <div class="text-center mb-4">
+      <div class="footer-animate text-center mb-4">
         <img src="img/strawhats/logo.png" alt="One Piece Logo" class="img-fluid" style="max-height: 100px;">
         <h1 class="onepiece-title " id="strawhat-section">Straw Hat Pirates</h1>
       </div>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="footer-animate row row-cols-1 row-cols-md-2 g-4">
 
         <div class="col">
           <div class="card  text-center">
