--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Chaepi Hub</title>
+  <title>ChaeDev</title>
   <link rel="icon" href="Me/chaewon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto+Mono&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto+Mono&display=swap"
+    rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
@@ -20,6 +21,7 @@
       --transition: 0.4s ease;
     }
 
+    
     body {
       background-color: var(--dark-bg);
       color: #fff;
@@ -51,7 +53,7 @@
       background-color: #ddd;
     }
 
-    body.light-theme nav.navbar .nav-link {
+    body.light-theme nav.navbar .nav-link  {
       color: var(--light-text);
     }
 
@@ -251,19 +253,24 @@
     }
 
     .footer-animate {
-  animation: float 3s ease-in-out infinite, glow 2s ease-in-out infinite, colorShift 6s linear infinite;
-  font-weight: bold;
-  text-align: center;
-}
+      animation: float 3s ease-in-out infinite, glow 2s ease-in-out infinite, colorShift 6s linear infinite;
+      font-weight: bold;
+      text-align: center;
+    }
 
-@keyframes float {
-  0%   { transform: translateY(0); }
-  50%  { transform: translateY(-5px); }
-  100% { transform: translateY(0); }
-}
+    @keyframes float {
+      0% {
+        transform: translateY(0);
+      }
 
+      50% {
+        transform: translateY(-5px);
+      }
 
-
+      100% {
+        transform: translateY(0);
+      }
+    }
   </style>
 </head>
 
@@ -273,7 +280,7 @@
     <div class="container">
       <a class="navbar-brand text-white fw-bold footer-animate" href="#">
         <img src="Me/chaewon.jpg" alt="Mini Logo" />
-        Chaepi Hub
+        ChaeDev
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -286,6 +293,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#activity-section ">Programming Languages</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about-section ">About Me</a>
           </li>
         </ul>
       </div>
@@ -316,16 +326,28 @@
   <h1 class="text-center mb-4 footer-animate" id="programming-languages-section">Programming Languages</h1>
 
   <div class="skills-container text-center mb-5">
-    <div class="skill"><i class="fab fa-php"></i><p>PHP</p></div>
-    <div class="skill"><i class="fab fa-html5"></i><p>HTML</p></div>
-    <div class="skill"><i class="fab fa-css3-alt"></i><p>CSS</p></div>
-    <div class="skill"><i class="fab fa-js-square"></i><p>JavaScript</p></div>
-    <div class="skill"><i class="fab fa-python"></i><p>Python</p></div>
-    <div class="skill"><i class="fab fa-java"></i><p>Java</p></div>
+    <div class="skill"><i class="fab fa-php"></i>
+      <p>PHP</p>
+    </div>
+    <div class="skill"><i class="fab fa-html5"></i>
+      <p>HTML</p>
+    </div>
+    <div class="skill"><i class="fab fa-css3-alt"></i>
+      <p>CSS</p>
+    </div>
+    <div class="skill"><i class="fab fa-js-square"></i>
+      <p>JavaScript</p>
+    </div>
+    <div class="skill"><i class="fab fa-python"></i>
+      <p>Python</p>
+    </div>
+    <div class="skill"><i class="fab fa-java"></i>
+      <p>Java</p>
+    </div>
   </div>
 
   <h1 class="text-center my-5 footer-animate">Projects</h1>
-      <div class="container px-4">
+  <div class="container px-4">
     <div class="row g-4">
       <div class="col-12" data-aos="fade-up">
         <div class="card h-100 p-3">
@@ -354,7 +376,8 @@
           <img src="A06/photos/aep.jpg" class="card-img-top mb-3" alt="Project 3" />
           <div class="card-body">
             <h5 class="card-title">AESPA & LSRFM</h5>
-            <p class="card-text">A Gallery about the K-Pop group Aespa and Le-Sserafim that has a collapsible footer.</p>
+            <p class="card-text">A Gallery about the K-Pop group Aespa and Le-Sserafim that has a collapsible footer.
+            </p>
             <a href="A06/index.html" class="btn btn-custom">View Project</a>
           </div>
         </div>
@@ -384,7 +407,7 @@
 
       <div class="col-12" data-aos="fade-up" data-aos-delay="500">
         <div class="card h-100 p-3">
-          <img src=""card-img-top mb-3" alt="Project 6" />
+          <img src="" card-img-top mb-3" alt="Coming Soon!" />
           <div class="card-body">
             <h5 class="card-title">To Be Continued!</h5>
             <p class="card-text">Coming Soon! </p>
@@ -394,34 +417,45 @@
       </div>
     </div>
   </div>
-    </div>
+  </div>
   </div>
 
   <footer class="bg-dark text-white mt-5">
     <div class="container py-4">
-      <button class="btn btn-outline-light mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#gifCollapse" aria-expanded="false" aria-controls="gifCollapse">
+      <button class="btn btn-outline-light mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#gifCollapse"
+        aria-expanded="false" aria-controls="gifCollapse">
         Show / Hide
       </button>
-     <div class="collapse" id="gifCollapse">
-  <div class="row g-3 mb-3 text-center">
-    <div class="col-6 col-md-3">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif" class="gif-img" alt="GIF 1" />
-    </div>
-    <div class="col-6 col-md-3">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif" class="gif-img" alt="GIF 2" />
-    </div>
-    <div class="col-6 col-md-3">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif" class="gif-img" alt="GIF 3" />
-    </div>
-    <div class="col-6 col-md-3">
-      <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif" class="gif-img" alt="GIF 4" />
-    </div>
-  </div>
-  <p class="text-center fs-5 mt-3 footer-animate">Stay Tuned for more exciting projects! 
-</div>
+      <div class="collapse" id="gifCollapse">
+        <div class="row g-3 mb-3 text-center">
+          <div class="col-6 col-md-3">
+            <img
+              src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHV5cjBnb2Q5aXo0d2RsOGFueHl6cDhiMndhOGQzdnF0cDE5djJzciZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vCkarGV0iwXTRfe7IK/giphy.gif"
+              class="gif-img" alt="GIF 1" />
+          </div>
+          <div class="col-6 col-md-3">
+            <img
+              src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/DhSfmBc85VYZUTaXy1/giphy.gif"
+              class="gif-img" alt="GIF 2" />
+          </div>
+          <div class="col-6 col-md-3">
+            <img
+              src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/cvlgCRaBhHyicvIfnb/giphy.gif"
+              class="gif-img" alt="GIF 3" />
+          </div>
+          <div class="col-6 col-md-3">
+            <img
+              src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW45c2I4bWRhM3FkZzIzeDJuMHEycG96aWxmb3lvaGp4cGNobTF0MSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/9ZNT6kkQ5iR373s1Gx/giphy.gif"
+              class="gif-img" alt="GIF 4" />
+          </div>
         </div>
+        <p class="text-center fs-5 mt-3 footer-animate">Stay Tuned for more exciting projects!
       </div>
-      <p class="text-center fs-5 mb-3 footer-animate">Minasan, Konichiwa! <strong>"I'm an aspiring web developer passionate about creating engaging and responsive websites. Please look forward to my future works and endeavors as I grow and explore the world of web development."</strong></p>
+    </div>
+    </div>
+    <p class="text-center fs-5 mb-3 footer-animate" id="about-section">Minasan, Konichiwa! <strong>"I'm an aspiring web developer
+        passionate about creating engaging and responsive websites. Please look forward to my future works and endeavors
+        as I grow and explore the world of web development."</strong></p>
     </div>
   </footer>
 
