--- a/A07/index.html
+++ b/A07/index.html
@@ -167,7 +167,7 @@
       <div class="footer-animate collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="/index.html">Profile</a>
+            <a class="nav-link text-white" href="/portfolio.html">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#search-sec">Search</a>
