--- a/A08/EZ-Parallax-master/banner.html
+++ b/A08/EZ-Parallax-master/banner.html
@@ -27,7 +27,7 @@
       <div class=" footer-animate navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="/index.html">Profile</a>
+            <a class="nav-link text-white" href="/portfolio.html">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#strawhat-section">Strawhats Pirates</a>
