--- a/multimedia.html
+++ b/multimedia.html
@@ -469,12 +469,12 @@
           
           <div class="col" data-aos="fade-up" data-aos-delay="400">
             <div class="card h-100 p-3">
-              <img src="https://placehold.co/600x400/9370DB/white?text=Photoshop+6" 
+              <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3NG03bWF1Nmd5ZmZyZm1maDRocDM0ZXF3ZHk4bmlxdmhxNGF3YWM0aCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/HFj5LtvQPf5Aaq9IaU/giphy.gif" 
                    class="card-img-top-placeholder" 
                    alt="Photoshop Project 6"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
-                   data-src="https://placehold.co/1200x800/9370DB/white?text=Photoshop+Project+6">
+                   data-src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3NG03bWF1Nmd5ZmZyZm1maDRocDM0ZXF3ZHk4bmlxdmhxNGF3YWM0aCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/HFj5LtvQPf5Aaq9IaU/giphy.gif">
               <div class="card-body mt-3">
                 <h5 class="card-title">Personal Movie Poster</h5>
                 <p class="card-text">Coming Soon!</p>
