--- a/index.html
+++ b/index.html
@@ -2416,31 +2416,31 @@
           title: "No Doubt",
           artist: "ENHYPEN",
           src: "mp4/nodoubt.mp4",
-          img: "me/nodoubt.png",
+          img: "Me/nodoubt.png",
         },
         {
           title: "Hit the Floor!",
           artist: "tripleS",
           src: "mp4/triples.mp4",
-          img: "me/triples.webp",
+          img: "Me/triples.webp",
         },
         {
           title: "Antifragile",
           artist: "Le Sserafim",
           src: "mp4/lsrfm.mp4",
-          img: "me/antifragile.jpg",
+          img: "Me/antifragile.jpg",
         },
         {
           title: "Drama",
           artist: "Aespa",
           src: "mp4/aespa.mp4",
-          img: "me/drama.png",
+          img: "Me/drama.png",
         },
         {
           title: "SHEESH",
           artist: "BABYMONSTER",
           src: "mp4/baemon.mp4",
-          img: "me/baemon.webp",
+          img: "Me/baemon.webp",
         }
       ];
 
