--- a/index.html
+++ b/index.html
@@ -1919,7 +1919,7 @@
                   <ul class="list-unstyled text-start"
                     style="font-family: 'Poppins', sans-serif; font-size: 1.1rem; line-height: 1.8; display: inline-block; margin-top: 1rem;">
                     <li class="mb-2"><i class="fas fa-gamepad me-3"
-                        style="color: var(--main-color); width: 20px;"></i> Playing Video Games</li>
+                        style="color: var(--main-color); width: 20px;"></i> Playing Mobile and PC games</li>
                     <li class="mb-2"><i class="fas fa-headphones me-3"
                         style="color: var(--main-color); width: 20px;"></i> Listening to K-Pop</li>
                     <li class="mb-2"><i class="fas fa-book-open me-3"
