--- a/multimedia.html
+++ b/multimedia.html
@@ -352,7 +352,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="portfolio.html">WebDev</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="multimedia.html">Multimedia</a>
@@ -396,7 +396,7 @@
             <div class="card h-100 p-3">
               <img src="Multimedia/winter after.jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 1"
+                   alt="Eye/Hair Color Manipulation"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
                    data-src="Multimedia/winter after.jpg">
@@ -411,7 +411,7 @@
             <div class="card h-100 p-3">
               <img src="Multimedia/OOB after.jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 2"
+                   alt="Out of Bounds"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
                    data-src="Multimedia/OOB after.jpg">
@@ -426,7 +426,7 @@
             <div class="card h-100 p-3">
               <img src="Multimedia/Godoy_After(3).jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 3"
+                   alt="Ghost Effect"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
                    data-src="Multimedia/Godoy_After(3).jpg">
@@ -441,7 +441,7 @@
             <div class="card h-100 p-3">
               <img src="Multimedia/frontulit.jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 4"
+                   alt="Business Card (Front)"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
                    data-src="Multimedia/frontulit.jpg">
@@ -456,7 +456,7 @@
             <div class="card h-100 p-3">
               <img src="Multimedia/Godoy_Back.jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 5"
+                   alt="Business Card (Back)"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
                    data-src="Multimedia/Godoy_Back.jpg">
@@ -469,15 +469,15 @@
           
           <div class="col" data-aos="fade-up" data-aos-delay="400">
             <div class="card h-100 p-3">
-              <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3NG03bWF1Nmd5ZmZyZm1maDRocDM0ZXF3ZHk4bmlxdmhxNGF3YWM0aCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/HFj5LtvQPf5Aaq9IaU/giphy.gif" 
+              <img src="Multimedia/Godoy_Poster.jpg" 
                    class="card-img-top-placeholder" 
-                   alt="Photoshop Project 6"
+                   alt="Movie Poster"
                    data-bs-toggle="modal"
                    data-bs-target="#imageModal"
-                   data-src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3NG03bWF1Nmd5ZmZyZm1maDRocDM0ZXF3ZHk4bmlxdmhxNGF3YWM0aCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/HFj5LtvQPf5Aaq9IaU/giphy.gif">
+                   data-src="Multimedia/Godoy_Poster.jpg">
               <div class="card-body mt-3">
                 <h5 class="card-title">Personal Movie Poster</h5>
-                <p class="card-text">Coming Soon!</p>
+                <p class="card-text">The Matrix in my own style</p>
               </div>
             </div>
           </div>
