--- a/portfolio.html
+++ b/portfolio.html
@@ -758,13 +758,13 @@
         <div class="col" data-aos="fade-up" data-aos-delay="500">
           <div class="card h-100 p-3">
             <img
-              src=""
+              src="Me/nodoubt.png"
               class="card-img-top mb-3" alt="Coming Soon!"
               onerror="this.src='https://placehold.co/600x300/333/9370DB?text=Coming+Soon!'"/>
             <div class="card-body">
-              <h5 class="card-title">To Be Continued!</h5>
-              <p class="card-text">Coming Soon! </p>
-              <a href="#" class="btn btn-custom disabled mt-auto">Coming Soon!
+              <h5 class="card-title">Enhypen Themed Waffle and Coffee Shop Web</h5>
+              <p class="card-text">WaffleHoon Cafe </p>
+              <a href="https://jpgodoy04.github.io/chaepi.github.io/" class="btn btn-custom  mt-auto">View Project
               </a>
             </div>
           </div>
